# python-interview

./: .gitignore  .ruff.toml  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
app/: __init__.py  main.py  models.py  redis_config.py  worker.py
app/routers/: jobs.py  todo_items.py  todo_lists.py
app/services/: todo_items.py  todo_lists.py
scripts/: start_worker.py
tests/: test_todo_items.py  test_todo_lists.py
